--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -10,10 +10,19 @@
     <title><%= current_page.data.title || "The Middleman" %></title>
     
     <%= stylesheet_link_tag "normalize", "all" %>
+    <%= stylesheet_link_tag '//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css' %>
+    <%= javascript_include_tag '//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js' %>
     <%= javascript_include_tag  "all" %>
+    <link href='http://fonts.googleapis.com/css?family=Oxygen:400,300,700'
+  rel='stylesheet' type='text/css'>
   </head>
   
   <body class="<%= page_classes %>">
-    <%= yield %>
+     <div id="main" role="main">
+     <%= partial "partials/nav" %>
+       <%= yield %>
+       <div class="push"></div>
+     </div>
+    <%= partial "partials/footer" %>
   </body>
 </html>
