--- a/source/stylesheets/all.css.scss
+++ b/source/stylesheets/all.css.scss
@@ -1,5 +1,9 @@
 @charset "utf-8";
 
 @import 'bourbon';
-@import 'bitters/bitters';
+@import 'base/base';
 @import 'neat';
+
+@import "partials/layout";
+@import "partials/nav";
+@import "partials/footer";
