--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,6 +1,21 @@
----
-title: Welcome to Middleman
----
 <section class="home">
-  <h1>POS Plus Static prototype</h1>
+  <div class="hero">
+    <div class="hero-inner">
+      <div class="hero-copy">
+        <h1>POS Plus Static prototype</h1>
+        <p>A few reasons why this product is worth using, who is it for and why do they need it.</p>	
+      </div>
+      <button>Learn More</button>
+    </div>
+  </div>
+  <div class="news">
+    <div class="news-inner">
+      <h2>News</h2>
+      <p>17-06-2014 <a href="#">News title</a><br />
+      news summary
+      </p>
+      <p>17-06-2014 <a href="#">News title</a><br />
+      news summary
+    </div>
+  </div>
 </section>
