implement research theme section

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -18,4 +18,29 @@
       news summary
     </div>
   </div>
+  <div class="research">
+  <div class="bullets">
+    <div class="bullet two-col-bullet">
+      <div class="bullet-icon bullet-icon-1">
+        <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/placeholder_logo_2.png
+  " alt="">
+      </div>
+      <div class="bullet-content">
+        <h2>This Bullet Title</h2>
+        <p>Lorem dolor sit amet consectetur adipisicing elit. Doloremque, minus, blanditiis, voluptatibus nulla quia ipsam sequi quos iusto aliquam iste magnam accusamus molestias quo illum impedit. Odit officia autem.</p>
+        <p><a href="#">Go to projects</a></p>
+      </div>
+    </div>  
+    <div class="bullet two-col-bullet">
+      <div class="bullet-icon bullet-icon-2">
+        <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/placeholder_logo_3.png" alt="">
+      </div>
+      <div class="bullet-content">
+        <h2>Another Bullet Title</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque, minus, blanditiis, voluptatibus nulla quia ipsam sequi quos iusto aliquam iste magnam accusamus molestias quo illum.</p>
+        <p><a href="#">Go to projects</a></p>
+      </div>
+    </div>
+  </div>
+  </div>
 </section>
