--- a/source/stylesheets/partials/_home.scss
+++ b/source/stylesheets/partials/_home.scss
@@ -3,7 +3,7 @@
 	$hero-background: desaturate(darken($base-accent-color, 20), 30);	
 	$hero-color: white;
 
-	background: url(/images/lake-transparent.png);
+	background: url(/images/logo-transparent.png);
 	background-color: $hero-background;
 	background-repeat: no-repeat;
 	background-position: top;
@@ -56,13 +56,92 @@
 }
 
 .news {
-  @include span-columns(3);
-  @include shift(1);
-
+  @include span-columns(4);
+  @include omega();
+  background-color: white;
+  box-shadow: 0 1px 4px 1px $light-gray;
+  min-height: 283px;
   .news-inner {
     @include outer-container;
+    margin: auto;
+    padding-top: 2em;
+    h2 {
+      text-align: center;
+    }
     p {
+      padding-left: 3em;
       margin-top: em(10);
     }
+  }
+}
+
+.research {
+  @include span-columns(12);
+  margin-top: em(60);
+}
+
+.bullets {
+  $icon-bullet-size: 3.5em;
+
+  overflow: auto;
+  margin-bottom: $base-line-height;
+
+  
+// change ".three-col-bullet" class to this for two bullet layout
+  .two-col-bullet {
+    @include media($large-screen) {
+      @include span-columns(6);
+      @include omega(2n);  
+    } 
+  }
+  
+  .three-col-bullet {
+    @include media($large-screen) {
+      @include span-columns(4);
+      @include omega(3n);
+    }
+  }
+
+  
+// change ".three-col-bullet" class to this for four bullet layout
+  .four-col-bullet {
+    @include media($large-screen) {
+      @include span-columns(3);
+      @include omega(4n);
+    }
+  }
+
+  .bullet-icon {
+    float: left;
+    background: $base-accent-color;
+    padding: $icon-bullet-size /4;
+    border-radius: 50%;
+    width: $icon-bullet-size;
+    height: $icon-bullet-size;
+  }
+
+  .bullet-icon-1 {
+    background: $base-accent-color;
+  }
+
+  .bullet-icon-2 {
+    background: adjust-hue($base-accent-color, -50);
+  }
+
+  .bullet-icon-3 {
+    background: adjust-hue($base-accent-color, -140);
+  }
+
+  .bullet-content {
+    margin-left: $icon-bullet-size *1.4;
+    margin-bottom: 2em;
+  }
+
+  h2 {
+    font-size: $icon-bullet-size /2.5;
+    padding-top: $icon-bullet-size /7;
+    margin-bottom: $icon-bullet-size /6;
+    border-bottom: 1px solid transparentize($base-font-color, .8);
+    display: inline-block;
   }
 }
