--- a/source/stylesheets/all.css.scss
+++ b/source/stylesheets/all.css.scss
@@ -7,4 +7,5 @@
 @import "partials/layout";
 @import "partials/nav";
 @import "partials/home";
+@import "partials/about";
 @import "partials/footer";
