implement people page

--- a/source/stylesheets/all.css.scss
+++ b/source/stylesheets/all.css.scss
@@ -8,4 +8,5 @@
 @import "partials/nav";
 @import "partials/home";
 @import "partials/about";
+@import "partials/people";
 @import "partials/footer";
