implement people detail page

--- a/source/people.html.erb
+++ b/source/people.html.erb
@@ -4,7 +4,7 @@
     <p>The Centre for Higher Education Governance Ghent is led by prof. Jeroen Huisman and employs seven researchers and has several affiliate members.</p>
   </div>
   <div class="member">
-    <a href="#"><img src="images/jeroen-huisman.jpg" /></a>
+    <a href="/people-detail.html"><img src="images/jeroen-huisman.jpg" /></a>
     <h5>Jeroen Huisman</h5>
     <p>Professor of Higher Education</p>
   </div>
