--- a/source/stylesheets/all.css.scss
+++ b/source/stylesheets/all.css.scss
@@ -9,4 +9,5 @@
 @import "partials/home";
 @import "partials/about";
 @import "partials/people";
+@import "partials/people-detail";
 @import "partials/footer";
