--- a/source/partials/_nav.erb
+++ b/source/partials/_nav.erb
@@ -6,9 +6,9 @@
     <p class="navigation-menu-button" id="js-mobile-menu">MENU</p>
     <div class="nav">
       <ul id="navigation-menu">
-        <li class="nav-link"><a href="javascript:void(0)">Home</a></li>
-        <li class="nav-link"><a href="javascript:void(0)">About Us</a></li>
-        <li class="nav-link"><a href="javascript:void(0)">People</a></li>
+        <li class="nav-link"><a href="/">Home</a></li>
+        <li class="nav-link"><a href="/about.html">About Us</a></li>
+        <li class="nav-link"><a href="/people.html">People</a></li>
         <li class="nav-link"><a href="javascript:void(0)">Research</a></li>
         <li class="nav-link"><a href="javascript:void(0)">Publications</a></li>
         <li class="nav-link"><a href="javascript:void(0)">Contact</a></li>
