implement publication series page

--- a/source/stylesheets/all.css.scss
+++ b/source/stylesheets/all.css.scss
@@ -10,4 +10,6 @@
 @import "partials/about";
 @import "partials/people";
 @import "partials/people-detail";
+@import "partials/publications";
+@import "partials/publicationseries";
 @import "partials/footer";
