--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -17,7 +17,7 @@
   rel='stylesheet' type='text/css'>
   </head>
   
-  <body class="<%= page_classes %>">
+  <body>
      <div id="main" role="main">
      <%= partial "partials/nav" %>
        <%= yield %>
