--- a/source/partials/_nav.erb
+++ b/source/partials/_nav.erb
@@ -10,7 +10,7 @@
         <li class="nav-link"><a href="/about.html">About Us</a></li>
         <li class="nav-link"><a href="/people.html">People</a></li>
         <li class="nav-link"><a href="javascript:void(0)">Research</a></li>
-        <li class="nav-link"><a href="javascript:void(0)">Publications</a></li>
+        <li class="nav-link"><a href="/publications.html">Publications</a></li>
         <li class="nav-link"><a href="javascript:void(0)">Contact</a></li>
       </ul>
     </div>
