implement research page

--- a/source/stylesheets/all.css.scss
+++ b/source/stylesheets/all.css.scss
@@ -12,4 +12,5 @@
 @import "partials/people-detail";
 @import "partials/publications";
 @import "partials/publicationseries";
+@import "partials/research.scss";
 @import "partials/footer";
