implement research theme page

--- a/source/research.html.erb
+++ b/source/research.html.erb
@@ -9,7 +9,7 @@
       <div class="bullet-content">
         <h2>This Bullet Title</h2>
         <p>In this part of the research programme, we are interested in how key higher education policy actors develop governance architectures and specific policies and instruments in an increasingly dynamic policy environment.</p><p>These dynamics play out e.g. with respect to the mix of regulatory and market coordination mechanisms visible in contemporary higher education governance; they also play out at different governance levels: national, regional and supranational.</p></p>To what extent this mix should be judged as a parsimonious governance effort or a “dangerous cocktail” will be explored by investigating the impact of these governance arrangements on stakeholders in higher education: particularly the higher education institutions, but also their academic staff and students.</p>
-        <p><a class="more" href="#">Go to projects</a></p>
+        <p><a class="more" href="/research-theme.html">Go to projects</a></p>
       </div>
     </div>  
     <div class="bullet two-col-bullet">
@@ -19,7 +19,7 @@
       <div class="bullet-content">
         <h2>Another Bullet Title</h2>
         <p>In this part of the research programme, we are interested in how key higher education policy actors develop governance architectures and specific policies and instruments in an increasingly dynamic policy environment.</p><p>These dynamics play out e.g. with respect to the mix of regulatory and market coordination mechanisms visible in contemporary higher education governance; they also play out at different governance levels: national, regional and supranational.</p></p>To what extent this mix should be judged as a parsimonious governance effort or a “dangerous cocktail” will be explored by investigating the impact of these governance arrangements on stakeholders in higher education: particularly the higher education institutions, but also their academic staff and students.</p>
-        <p><a class="more" href="#">Go to projects</a></p>
+        <p><a class="more" href="/research-theme.html">Go to projects</a></p>
       </div>
     </div>
   </div>
