--- a/source/stylesheets/all.css.scss
+++ b/source/stylesheets/all.css.scss
@@ -12,5 +12,6 @@
 @import "partials/people-detail";
 @import "partials/publications";
 @import "partials/publicationseries";
-@import "partials/research.scss";
+@import "partials/research";
+@import "partials/researchtheme";
 @import "partials/footer";
