--- a/source/publications.html.erb
+++ b/source/publications.html.erb
@@ -2,7 +2,7 @@
   <section class="publication-series">
   <h2>POS+ Publications Series</h2>
   <p>Chronological list of working papers and technical reports with possibility to download</p>
-  <p><a href="#">Go to POS+ Publication Series</a></p>
+  <p><a href="/publication-series.html">Go to POS+ Publication Series</a></p>
 </section>
   <section class="publication-list">
   <h2>Publication List</h2>
