--- a/source/research-theme.html.erb
+++ b/source/research-theme.html.erb
@@ -1,10 +1,6 @@
 <section class="research-theme">
-  <div class="theme">
-    <h1>Research Theme 1</h1>
-    <p>Lorem dolor sit amet consectetur adipisicing elit. Doloremque, minus, blanditiis, voluptatibus nulla quia ipsam sequi quos iusto aliquam iste magnam accusamus molestias quo illum impedit. Odit officia autem.</p>
-  </div>
   <div class="projects">
-    <h2>Projects</h2>
+    <h1>Projects</h1>
     <div class="project">
       <p><a class="more" href="#">Odysseus project 'Higher Education Governance'</a><br />
       The overall aim of the research (supported by a five-year FWO Odysseus grant) is to increase our scholarly understanding of Governance in Higher Education.</p>
@@ -22,4 +18,8 @@
       The overall aim of the research (supported by a five-year FWO Odysseus grant) is to increase our scholarly understanding of Governance in Higher Education.</p>
     </div>
   </div>
+  <aside>
+    <h2>Research Theme 1</h2>
+    <p>Lorem dolor sit amet consectetur adipisicing elit. Doloremque, minus, blanditiis, voluptatibus nulla quia ipsam sequi quos iusto aliquam iste magnam accusamus molestias quo illum impedit. Odit officia autem.</p>
+  </aside>
 </section>
