fix issue layout about page

--- a/source/about.html.erb
+++ b/source/about.html.erb
@@ -1,5 +1,5 @@
 <section class="about">
-  <article>
+  <article class="about">
     <h1>About POS+</h1>
     <h2>Mission Statement</h2>
     <p>The research group Participation, Opportunities, Structures (POS+) focusses its research on the multidimensional patters of participation and social exclusion in both current and past societies.</p>
