make wps en tr for pos+ publication series align next to each other for desktop screens

--- a/source/publication-series.html.erb
+++ b/source/publication-series.html.erb
@@ -1,6 +1,6 @@
 <section class="publications">
   <section class="working-papers">
-    <h1>POS+ Working Paper Series</h1>
+    <h2>Working Papers</h2>
     <ul>
       <li><a href="#">working paper 1</a><i class="fa fa-file"></i></li>
       <li><a href="#">working paper 2</a><i class="fa fa-file"></i></li>
@@ -8,7 +8,7 @@
     </ul>
   </section>
   <section class="technical-reports">
-    <h1>Technical Reports</h1>
+    <h2>Technical Reports</h2>
     <ul>
       <li><a href="#">technical report 1</a><i class="fa fa-file"></i></li>
       <li><a href="#">technical report 2</a><i class="fa fa-file"></i></li>
