--- a/source/partials/_nav.erb
+++ b/source/partials/_nav.erb
@@ -11,7 +11,7 @@
         <li class="nav-link"><a href="/people.html">People</a></li>
         <li class="nav-link"><a href="/research.html">Research</a></li>
         <li class="nav-link"><a href="/publications.html">Publications</a></li>
-        <li class="nav-link"><a href="javascript:void(0)">Contact</a></li>
+        <li class="nav-link"><a href="/contact.html">Contact</a></li>
       </ul>
     </div>
     <div class="navigation-tools">
