--- a/source/stylesheets/all.css.scss
+++ b/source/stylesheets/all.css.scss
@@ -14,4 +14,5 @@
 @import "partials/publicationseries";
 @import "partials/research";
 @import "partials/researchtheme";
+@import "partials/contact";
 @import "partials/footer";
