--- a/source/stylesheets/partials/_publicationseries.scss
+++ b/source/stylesheets/partials/_publicationseries.scss
@@ -19,7 +19,7 @@ section.publications {
     }
 
     i {
-      color: $base-accent-color;
+      color: #40526b;
       font-size: $base-font-size * 1.2;
       margin-left: em(10);
     }
