implement data page

--- a/source/stylesheets/all.css.scss
+++ b/source/stylesheets/all.css.scss
@@ -12,6 +12,7 @@
 @import "partials/people-detail";
 @import "partials/publications";
 @import "partials/publicationseries";
+@import "partials/dataset";
 @import "partials/research";
 @import "partials/researchtheme";
 @import "partials/contact";
