add research project page

--- a/source/research-theme.html.erb
+++ b/source/research-theme.html.erb
@@ -2,7 +2,7 @@
   <div class="projects">
     <h1>Projects</h1>
     <div class="project">
-      <p><a class="more" href="#">Odysseus project 'Higher Education Governance'</a><br />
+      <p><a class="more" href="/research-project.html">Odysseus project 'Higher Education Governance'</a><br />
       The overall aim of the research (supported by a five-year FWO Odysseus grant) is to increase our scholarly understanding of Governance in Higher Education.</p>
     </div>
     <div class="project">
