--- a/source/stylesheets/all.css.scss
+++ b/source/stylesheets/all.css.scss
@@ -15,5 +15,6 @@
 @import "partials/dataset";
 @import "partials/research";
 @import "partials/researchtheme";
+@import "partials/researchproject";
 @import "partials/contact";
 @import "partials/footer";
