--- a/source/research.html.erb
+++ b/source/research.html.erb
@@ -1,10 +1,8 @@
 <section class="researchthemes">
-  <h1>POS+ Research</h1>
-  <div class="bullets">
-    <div class="bullet two-col-bullet">
+    <div class="bullets">
+    <div class="two-col-bullet">
       <div class="bullet-icon bullet-icon-1">
-        <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/placeholder_logo_2.png
-  " alt="">
+        <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/placeholder_logo_2.png" alt="">
       </div>
       <div class="bullet-content">
         <h2>This Bullet Title</h2>
@@ -14,7 +12,7 @@
     </div>  
     <div class="bullet two-col-bullet">
       <div class="bullet-icon bullet-icon-2">
-        <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/placeholder_logo_3.png" alt="">
+        <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/placeholder_logo_3.png" alt=""/>
       </div>
       <div class="bullet-content">
         <h2>Another Bullet Title</h2>
