--- a/source/stylesheets/partials/_research.scss
+++ b/source/stylesheets/partials/_research.scss
@@ -1,7 +1,41 @@
-.bullets {
-  margin-top: em(20);
-} 
-.two-col-bullet {
-  background: white;
-  padding: 1em;
-}
+  div.bullets {
+    $icon-bullet-size: 3.5em;
+    overflow: auto;
+    margin-bottom: $base-line-height;
+    .two-col-bullet {
+      @include span-columns(6);
+      @include omega(2n);
+      background: white;
+      padding: 1em;
+
+      
+
+      .bullet-icon {
+        float: left;
+        background: $base-accent-color;
+        padding: $icon-bullet-size /4;
+        border-radius: 50%;
+        width: $icon-bullet-size;
+        height: $icon-bullet-size;
+      }
+
+      .bullet-icon-1 {
+        background: $base-accent-color;
+      }
+
+      .bullet-icon-2 {
+        background: adjust-hue($base-accent-color, -50);
+      }
+      .bullet-content {
+        margin-left: $icon-bullet-size *1.4;
+        margin-bottom: 2em;
+      }
+      h2 {
+        font-size: $icon-bullet-size /2.5;
+        padding-top: $icon-bullet-size /7;
+        margin-bottom: $icon-bullet-size /6;
+        border-bottom: 1px solid transparentize($base-font-color, .8);
+        display: inline-block;
+      }
+    }
+  }
