adapt homepage to mobile phone screens

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -20,7 +20,7 @@
   </div>
   <div class="research">
   <div class="bullets">
-    <div class="bullet two-col-bullet">
+    <div class="bullet">
       <div class="bullet-icon bullet-icon-1">
         <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/placeholder_logo_2.png
   " alt="">
@@ -31,7 +31,7 @@
         <p><a href="#">Go to projects</a></p>
       </div>
     </div>  
-    <div class="bullet two-col-bullet">
+    <div class="bullet">
       <div class="bullet-icon bullet-icon-2">
         <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/placeholder_logo_3.png" alt="">
       </div>
