--- a/source/stylesheets/partials/_about.scss
+++ b/source/stylesheets/partials/_about.scss
@@ -9,7 +9,11 @@ section {
     box-shadow: 0 1px 4px 1px $light-gray;
     h1 {
       text-align: center;
+      margin-top: em(20);
+      @include media($large-screen) {
       margin-bottom: em(20);
+      margin-top: 0;
+      }
     }
 
   }
