--- a/source/stylesheets/partials/_people.scss
+++ b/source/stylesheets/partials/_people.scss
@@ -1,10 +1,26 @@
 .lead {
   @include span-columns(12);
   margin-bottom: em(20);
+  @include media($small-screen) {
+    margin-top: em(40);
+    h1 {
+      text-align: center;
+      margin-bottom: em(10);
+    }
+    p {
+      margin-left: 1.75em;
+    }
+  }
 }
 .member {
-  @include span-columns (3 of 12);
-  @include omega(4n);
+  @include media($medium-screen) {
+    @include span-columns (3 of 12);
+    @include omega(4n);
+  }
+
+  @include media($small-screen) {
+    text-align: center;
+  }
   background-color: white;
   padding: em(10);
   box-shadow: 0 1px 4px 1px #b4b6a9,2px 2px 1px 0 #fff inset;
