fix issue with h1 title for mobile phone screens

--- a/source/stylesheets/partials/_people-detail.scss
+++ b/source/stylesheets/partials/_people-detail.scss
@@ -3,6 +3,9 @@ section {
   @include media($small-screen) {
     padding: 1.75em;
     padding-top: 2em;
+    h1 {
+      font-size: 2em;
+    }
   }
 article {
   @include span-columns(12);
