adapt research page for mobile phone screens

--- a/source/research.html.erb
+++ b/source/research.html.erb
@@ -1,6 +1,6 @@
 <section class="researchthemes">
     <div class="bullets">
-    <div class="two-col-bullet">
+    <div class="bullet">
       <div class="bullet-icon bullet-icon-1">
         <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/placeholder_logo_2.png" alt="">
       </div>
@@ -10,7 +10,7 @@
         <p><a class="more" href="/research-theme.html">Go to projects</a></p>
       </div>
     </div>  
-    <div class="bullet two-col-bullet">
+    <div class="bullet">
       <div class="bullet-icon bullet-icon-2">
         <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/placeholder_logo_3.png" alt=""/>
       </div>
