fix margins on about page for mobile phone screens

--- a/source/stylesheets/partials/_about.scss
+++ b/source/stylesheets/partials/_about.scss
@@ -4,6 +4,9 @@ section {
       @include span-columns(8 of 12);
       padding: 3em;
     }
+    @include media($small-screen) {
+      margin-top: em(20);
+    }
     padding: .75em;
     background-color: white;
     box-shadow: 0 1px 4px 1px $light-gray;
@@ -22,6 +25,9 @@ section {
     @include media($large-screen) {
       @include span-columns(4 of 12);
       @include omega();
+    }
+    @include media($small-screen) {
+      margin-top: em(20);
     }
     h2 {
       font-size: $base-font-size * 1.2;
