adapt dataset page to mobile phone screens

--- a/source/stylesheets/partials/_dataset.scss
+++ b/source/stylesheets/partials/_dataset.scss
@@ -1,11 +1,28 @@
 section.data {
+  @include outer-container;
+  h1 {
+    @include media($small-screen) {
+      margin-top: em(20);
+      text-align: center;
+    }
+    @include media(larg-screen) {
+      margin-top: 0;
+    }
+  }
   article.publication {
-    @include span-columns(12);
     margin-top: em(20);
     margin-bottom: em(20);
-    padding: 3em;
+
+    @include media($large-screen) {
+      @include span-columns(12);
+      padding: 3em;
+    }
     h1 {
-      font-size: $base-font-size * 1.2;
+      @include media($small-screen) {
+        font-size: $base-font-size;
+        margin-top: 0;
+      }
+      text-align: left;
     }
 
     i {
@@ -14,9 +31,25 @@ section.data {
     }
 
     div.dataset {
-      @include span-columns(6 of 12);
+      @include media($large-screen) {
+        @include span-columns(6 of 12);
+      }
       h2 {
-        font-size: $base-font-size * 1.2;
+        @include media($small-screen) {
+          font-size: $base-font-size;
+          text-align: center;
+        }
+        @include media($large-screen) {
+          font-size: $base-font-size * 1.2;
+          text-align: left;
+        }
+      }
+
+      p {
+        font-size: .9em;
+        @include media($large-screen) {
+          font-size: $base-font-size;
+        }
       }
 
       ul {
