--- a/source/stylesheets/partials/_publications.scss
+++ b/source/stylesheets/partials/_publications.scss
@@ -1,9 +1,20 @@
-section.publication-series {
-  margin-bottom: em(20);
-}
+section.publications {
+  @include outer-container;
+  section.publication-series {
+    margin-bottom: em(20);
+  }
 
-section.publication-list, section.publication-series {
-  padding: 3em;
-  background: white;
-  margin-top: em(20);
+  section.publication-list, section.publication-series {
+    @include media($large-screen) {
+      padding: 3em;
+    }
+    background: white;
+    margin-top: em(20);
+    h2 {
+      @include media($small-screen) {
+        font-size: $base-font-size * 1.2;  
+      }
+      margin-bottom: em(10);;
+    }
+  }
 }
