add box-shadow on publication pages

--- a/source/publication-series.html.erb
+++ b/source/publication-series.html.erb
@@ -1,18 +1,21 @@
 <section class="publications">
-  <section class="working-papers">
-    <h2>Working Papers</h2>
-    <ul>
-      <li><a href="#">working paper 1</a><i class="fa fa-file"></i></li>
-      <li><a href="#">working paper 2</a><i class="fa fa-file"></i></li>
-      <li><a href="#">working paper 3</a><i class="fa fa-file"></i></li>
-    </ul>
-  </section>
-  <section class="technical-reports">
-    <h2>Technical Reports</h2>
-    <ul>
-      <li><a href="#">technical report 1</a><i class="fa fa-file"></i></li>
-      <li><a href="#">technical report 2</a><i class="fa fa-file"></i></li>
-      <li><a href="#">technical report 3</a><i class="fa fa-file"></i></li>
-    </ul>
-  </section>
+  <h1>POS+ Publication Series</h1>
+  <div class="series">
+    <div class="working-papers">
+      <h2>Working Papers</h2>
+      <ul>
+        <li><a href="#">working paper 1</a><i class="fa fa-file"></i></li>
+        <li><a href="#">working paper 2</a><i class="fa fa-file"></i></li>
+        <li><a href="#">working paper 3</a><i class="fa fa-file"></i></li>
+      </ul>
+    </div>
+    <div class="technical-reports">
+      <h2>Technical Reports</h2>
+      <ul>
+        <li><a href="#">technical report 1</a><i class="fa fa-file"></i></li>
+        <li><a href="#">technical report 2</a><i class="fa fa-file"></i></li>
+        <li><a href="#">technical report 3</a><i class="fa fa-file"></i></li>
+      </ul>
+    </div>
+  </div>
 </section>
