--- a/source/publications.html.erb
+++ b/source/publications.html.erb
@@ -1,10 +1,10 @@
 <section class="publications">
-  <section class="publication-series">
+  <div class="publication-series">
   <h2>POS+ Publications Series</h2>
   <p>Chronological list of working papers and technical reports with possibility to download</p>
   <p><a href="/publication-series.html">Go to POS+ Publication Series</a></p>
-</section>
-  <section class="publication-list">
+</div>
+  <div class="publication-list">
   <h2>Publication List</h2>
   <iframe src="https://biblio.ugent.be/publication?embed=1&q=author+any+%22801001046748+801000461819+801001426866+801001806681+801001484056+802001245777+802000876874+802000390157+000100313558+802001377133+802000963265+802000188275+802000557077+802000138462+801000829207+801001877211+802000362673+802000300736%22+or+(type+exact+bookEditor+and+editor+any+%22801001046748+801000461819+801001426866+801001806681+801001484056+802001245777+802000876874+802000390157+000100313558+802001377133+802000963265+802000188275+802000557077+802000138462+801000829207+801001877211+802000362673+802000300736%22)&amp;hide_info=1&amp;hide_options=1"
      width="100%"
@@ -12,5 +12,5 @@
      allowtransparency="true"
      frameborder="0">
     </iframe>
-  </section>
+  </div>
 </section>
