--- a/source/stylesheets/partials/_publications.scss
+++ b/source/stylesheets/partials/_publications.scss
@@ -1,10 +1,12 @@
 section.publications {
   @include outer-container;
-  section.publication-series {
+  div.publication-series {
     margin-bottom: em(20);
   }
 
-  section.publication-list, section.publication-series {
+  div.publication-list, div.publication-series {
+    box-shadow: 0 1px 4px 1px $light-gray;
+    padding: .75em;
     @include media($large-screen) {
       padding: 3em;
     }
@@ -13,6 +15,9 @@ section.publications {
     h2 {
       @include media($small-screen) {
         font-size: $base-font-size * 1.2;  
+      }
+      @include media($large-screen) {
+        font-size: $base-font-size * 2;
       }
       margin-bottom: em(10);;
     }
