--- a/source/stylesheets/partials/_publicationseries.scss
+++ b/source/stylesheets/partials/_publicationseries.scss
@@ -1,5 +1,17 @@
 section.publications {
-  section.working-papers, section.technical-reports {
+  h1 {
+    font-size: $base-font-size * 1.2;
+    margin-top: em(20);
+    text-align: center;
+    @include media($medium-screen) {
+      font-size: $base-font-size * 2;
+      margin-top: 0;
+      margin-bottom: em(10);
+    }
+  }
+  div.working-papers, div.technical-reports {
+    padding: .75em;
+    margin-top: em(20);
     @include media($medium-screen) {
       @include span-columns(6);
       @include omega(2n);
@@ -12,6 +24,9 @@ section.publications {
       @include media($small-screen) {
         font-size: $base-font-size * 1.2;
         text-align: center;
+      }
+      @include media($medium-screen) {
+        font-size: $base-font-size * 2;
       }
     }
 
