--- a/source/stylesheets/partials/_about.scss
+++ b/source/stylesheets/partials/_about.scss
@@ -1,15 +1,24 @@
 section {
+  h1 {
+    font-size: $base-font-size * 1.2;
+    margin-top: em(20);
+    margin-bottom: em(10);
+    text-align: center;
+    @include media($medium-screen) {
+      margin-top: 0;
+    }
+  }
   article.about {
-    @include media($large-screen) {
+    padding: .75em;
+    @include media($medium-screen) {
       @include span-columns(8 of 12);
       padding: 3em;
+      box-shadow: 0 1px 4px 1px $light-gray;
     }
     @include media($small-screen) {
       margin-top: em(20);
     }
-    padding: .75em;
     background-color: white;
-    box-shadow: 0 1px 4px 1px $light-gray;
     h1 {
       text-align: center;
       margin-top: em(20);
@@ -19,6 +28,15 @@ section {
       }
     }
 
+    h2 {
+      margin-top: 0;
+      font-size: $base-font-size * 1.2;
+      text-align: center;
+      margin-bottom: em(10);
+      @include media($medium-screen) {
+        font-size: $base-font-size * 2;
+      }
+    }
   }
   aside {
     @include fill-parent;
