--- a/source/stylesheets/partials/_about.scss
+++ b/source/stylesheets/partials/_about.scss
@@ -1,6 +1,5 @@
 section.about {
   h1 {
-    font-size: $base-font-size * 1.2;
     margin-top: em(20);
     margin-bottom: em(10);
     text-align: center;
@@ -47,6 +46,7 @@ section.about {
     @include clearfix;
     @include media($medium-screen) {
       @include span-columns(4);
+      padding: 3em;
     }
     h2 {
       font-size: $base-font-size * 1.2;
