adapt contact page to mobile phone screens

--- a/source/contact.html.erb
+++ b/source/contact.html.erb
@@ -1,5 +1,7 @@
 <section class="contact">
-  <h1>Contact Us</h1>
+  <div class="title">
+    <h1>Contact Us</h1>
+  </div>
   <div class="where">
   <ul class="accordion-tabs-minimal">
     <li class="tab-header-and-content">
@@ -19,7 +21,7 @@
 <div class="information">
   <h2>Contact Information</h2>
   <p>Korte Meer 5, 9000 Gent, BELGIUM<br />
-  Jeroen Huisman: +32 9 264 69 78 | Secretariat of the Dept. of Sociology: <i class="fa fa-phone-square"></i>+32 9 264 91 71<br />
+  Jeroen Huisman: +32 9 264 69 78 | Secretariat of the Dept. of Sociology: <br /><i class="fa fa-phone-square"></i>+32 9 264 91 71<br />
   <i class="fa fa-phone-square"></i>+32 9 264 69 75<br />
   <i class="fa fa-envelope"></i><a href="mailto:jeroen.huisman@ugent.be">jeroen.huisman@ugent.be</a>
 </div>
