--- a/source/stylesheets/partials/_research.scss
+++ b/source/stylesheets/partials/_research.scss
@@ -1,26 +1,25 @@
-section {
-  @include media($small-screen) {
-    padding: 1em;
-  }
+section.researchthemes {
+  @include outer-container;
+  padding: 1em;
   div.bullets {
     $icon-bullet-size: 3.5em;
     overflow: auto;
     margin-bottom: $base-line-height;
     .bullet {
-      @include media($large-screen) {
-        @include span-columns(6);
-        @include omega(2n);
-      }
-      @include media($small-screen) {
-        margin-top: em(20);
-      }
+      margin-top: em(20);
       background: white;
       padding: 1em;
+      @include media($medium-screen) {
+        @include span-columns(6);
+        @include omega(2n);
+        margin-top: 0;
+      }
 
       
 
       .bullet-icon {
-        @include media($large-screen) {
+        margin: auto;
+        @include media($medium-screen) {
           float: left;
         }
         background: $base-accent-color;
@@ -38,11 +37,9 @@ section {
         background: adjust-hue($base-accent-color, -50);
       }
       .bullet-content {
-        @include media($small-screen) {
-          margin-left: 0;
-          margin-right: 0;
-        }
-        @include media($large-screen) {
+        margin-left: 0;
+        margin-right: 0;
+        @include media($medium-screen) {
         margin-left: $icon-bullet-size *1.4;
         margin-bottom: 2em;
         }
