--- a/source/stylesheets/partials/_about.scss
+++ b/source/stylesheets/partials/_about.scss
@@ -14,10 +14,6 @@ section.about {
       padding: 3em;
       box-shadow: 0 1px 4px 1px $light-gray;
     }
-    @include media($small-screen) {
-      margin-top: em(20);
-      margin-bottom: em(20);
-    }
     background-color: white;
     h1 {
       text-align: center;
@@ -47,6 +43,7 @@ section.about {
     @include media($medium-screen) {
       @include span-columns(4);
       padding: 3em;
+      margin-top: 0;
     }
     h2 {
       font-size: $base-font-size * 1.2;
