--- a/source/stylesheets/partials/_people-detail.scss
+++ b/source/stylesheets/partials/_people-detail.scss
@@ -1,33 +1,43 @@
 section {
-  @include outer-container;
-  @include media($small-screen) {
-    padding: 1.75em;
-    padding-top: 2em;
-    h1 {
-      font-size: 2em;
-    }
-  }
-article {
-  @include span-columns(12);
-  img {
-    @include media($large-screen) {
-      float: right;
-      margin-left: em(20);
-    }
-    @include media($small-screen) {
+  article {
+    @include span-columns(12);
+    img {
       display: block;
       margin: auto;
       margin-top: em(20);
       margin-bottom: em(20);
+      @include media($medium-screen) {
+        float: right;
+        margin-top: 0;
+        margin-left: em(20);
+      }
+      border: 1px solid $light-gray;
+      padding: 3px;
     }
-    border: 1px solid $light-gray;
-    padding: 3px;
+    h1 {
+      font-size: $base-font-size * 1.5;
+      text-align: center;
+      margin-top: em(20);
+      @include media($medium-screen) {
+        font-size: $base-font-size * 2.25;
+        margin-bottom: em(10);
+      }
+    }
+    h2 {
+      margin-top: em(20);
+      margin-bottom: em(10);
+      text-align: center;
+      font-size: $base-font-size * 1.2;
+      @include media($medium-screen) {
+        font-size: $base-font-size * 2;
+        text-align: left;
+      }
+    }
+    ul {
+      margin-top: em(10);
+    }
+    li {
+      margin-bottom: 1em;
+    }
   }
-  h2 {
-    margin-top: em(20);
-  }
-  li {
-    margin-bottom: 1em;
-  }
- }
 }
