--- a/source/stylesheets/partials/_publications.scss
+++ b/source/stylesheets/partials/_publications.scss
@@ -1,25 +1,28 @@
 section.publications {
   @include outer-container;
-  div.publication-series {
-    margin-bottom: em(20);
+  padding: .75em;
+  .publication-series {
+    margin-top: em(20);
   }
 
-  div.publication-list, div.publication-series {
-    box-shadow: 0 1px 4px 1px $light-gray;
-    padding: .75em;
-    @include media($large-screen) {
+  .publication-list {
+    @include media($medium-screen) {
       padding: 3em;
     }
-    background: white;
     margin-top: em(20);
+  }
+
+  .publication-series, .publication-list {
+    padding: .75em;
+    box-shadow: 0 1px 4px 1px $light-gray;
+    background: white;
     h2 {
-      @include media($small-screen) {
-        font-size: $base-font-size * 1.2;  
-      }
-      @include media($large-screen) {
+      font-size: $base-font-size * 1.2;
+      text-align: center;
+      @include media($medium-screen) {
         font-size: $base-font-size * 2;
+        text-align: left;
       }
-      margin-bottom: em(10);;
     }
   }
 }
