--- a/source/stylesheets/partials/_publicationseries.scss
+++ b/source/stylesheets/partials/_publicationseries.scss
@@ -15,18 +15,18 @@ section.publications {
     @include media($medium-screen) {
       @include span-columns(6);
       @include omega(2n);
+      margin-top: 0;
       padding: 3em;
     }
     background-color: white;
     box-shadow: 0 1px 4px 1px $light-gray;
 
     h2 {
-      @include media($small-screen) {
-        font-size: $base-font-size * 1.2;
-        text-align: center;
-      }
+      font-size: $base-font-size * 1.2;
+      text-align: center;
       @include media($medium-screen) {
         font-size: $base-font-size * 2;
+        text-align: left;
       }
     }
 
