--- a/source/stylesheets/base/_base.scss
+++ b/source/stylesheets/base/_base.scss
@@ -14,6 +14,7 @@
 @import 'extends/button';
 @import 'extends/clearfix';
 @import 'extends/hide-text';
+@import 'extends/box-shadow';
 
 // Typography and Elements
 @import 'typography';
