--- a/source/stylesheets/partials/_publications.scss
+++ b/source/stylesheets/partials/_publications.scss
@@ -1,16 +1,6 @@
 section.publications {
   @include outer-container;
   padding: .75em;
-  .publication-series {
-    margin-top: em(20);
-  }
-
-  .publication-list {
-    @include media($medium-screen) {
-      padding: 3em;
-    }
-    margin-top: em(20);
-  }
 
   .publication-series, .publication-list {
     padding: .75em;
@@ -19,10 +9,26 @@ section.publications {
     h2 {
       font-size: $base-font-size * 1.2;
       text-align: center;
+      margin-bottom: em(10);
       @include media($medium-screen) {
         font-size: $base-font-size * 2;
         text-align: left;
+        margin-bottom: 0;
       }
     }
+  }
+
+  .publication-series {
+    margin-top: em(20);
+    @include media($medium-screen) {
+      padding: 3em;
+    }
+  }
+
+  .publication-list {
+    @include media($medium-screen) {
+      padding: 3em;
+    }
+    margin-top: em(20);
   }
 }
