--- a/source/stylesheets/partials/_researchproject.scss
+++ b/source/stylesheets/partials/_researchproject.scss
@@ -3,7 +3,7 @@ section.project {
     margin-top: em(20);
     padding: .75em;
     background: white;
-    box-shadow: 0 1px 4px 1px #dddddd;
+    @extend .box-shadow;
 
     @include media($large-screen) {
       margin-top: 0;
@@ -11,22 +11,26 @@ section.project {
     }
 
     img {
-      margin-top: 0;
-      @include media($small-screen) {
-        margin-top: em(20);
+      margin-top: em(20);
+      @include media($medium-screen) {
+        margin-top: 0;
       }
     }
 
     h1 {
-      @include media($small-screen) {
-        font-size: $base-font-size * 1.2;
+      font-size: $base-font-size * 1.2;
+      margin-bottom: em(10);
+      @include media($medium-screen) {
+        font-size: $base-font-size * 2.25;
       }
     }
 
     h2 {
-      @include media($small-screen) {
-        font-size: $base-font-size * 1.2;
-        text-align: center;
+      font-size: $base-font-size * 1.2;
+      text-align: center;
+      @include media($medium-screen) {
+        font-size: $base-font-size * 2;
+        text-align: left;
       }
     }
 
