implement style for news item page

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -11,7 +11,7 @@
   <div class="news">
     <div class="news-inner">
       <h2>News</h2>
-      <p>17-06-2014 <a href="#">News title</a><br />
+      <p>17-06-2014 <a href="/news-item.html">News title</a><br />
       news summary
       </p>
       <p>17-06-2014 <a href="#">News title</a><br />
