--- a/source/stylesheets/all.css.scss
+++ b/source/stylesheets/all.css.scss
@@ -16,5 +16,6 @@
 @import "partials/research";
 @import "partials/researchtheme";
 @import "partials/researchproject";
+@import "partials/news";
 @import "partials/contact";
 @import "partials/footer";
