implement in the picture box

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -26,7 +26,11 @@
   " alt="">
       </div>
       <div class="bullet-content">
-        <h2>This Bullet Title</h2>
+        <h2>Research Themes</h2>
+        <h3>Research Theme 1</h3>
+        <p>Lorem dolor sit amet consectetur adipisicing elit. Doloremque, minus, blanditiis, voluptatibus nulla quia ipsam sequi quos iusto aliquam iste magnam accusamus molestias quo illum impedit. Odit officia autem.</p>
+        <p><a href="#">Go to projects</a></p>
+        <h3>Research Theme 1</h3>
         <p>Lorem dolor sit amet consectetur adipisicing elit. Doloremque, minus, blanditiis, voluptatibus nulla quia ipsam sequi quos iusto aliquam iste magnam accusamus molestias quo illum impedit. Odit officia autem.</p>
         <p><a href="#">Go to projects</a></p>
       </div>
@@ -36,9 +40,10 @@
         <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/placeholder_logo_3.png" alt="">
       </div>
       <div class="bullet-content">
-        <h2>Another Bullet Title</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque, minus, blanditiis, voluptatibus nulla quia ipsam sequi quos iusto aliquam iste magnam accusamus molestias quo illum.</p>
-        <p><a href="#">Go to projects</a></p>
+        <h2>In the picture</h2>
+        <p>Seminar 'Europe and higher education: The muscles from Brussels?'</p>
+        <img src="images/jigsaw-puzzle.jpg" />
+        <p><a href="#">More info</a></p>
       </div>
     </div>
   </div>
